--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>10.0.2</java.version>
+
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,6 +42,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+			<version>1.18.22</version>
         </dependency>
     </dependencies>
 
@@ -52,10 +55,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+				<configuration> <source>3.8.1</source>
+					<target>3.8.1</target> </configuration>
 			</plugin>
 		</plugins>
 	</build>
