--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration> <source>3.8.1</source>
-					<target>3.8.1</target> </configuration>
+				<version>3.8.1</version>
+				<configuration>
+					<source>3.8.1</source>
+					<target>3.8.1</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
